crates/mineral-channel/netease/src/wire/snapshots/dead_song_with_null_artist_and_album_name.snap
---
source: crates/mineral-channel/netease/src/wire/song.rs
assertion_line: 126
description: "失效单曲:ar:[null] + al.name:null 的清洗结果(ar 应空、al.name 应空串)"
expression: songs
---
[
    AlbumSong {
        id: 1,
        name: "张洲",
        tns: [],
        ar: [],
        al: Album {
            id: 0,
            name: "",
            pic_url: Some(
                "http://p4.music.126.net/x.jpg",
            ),
        },
        dt: 0,
    },
]
