crates/mineral-channel/netease/src/wire/snapshots/parses_artist_list.snap
---
source: crates/mineral-channel/netease/src/wire/search.rs
assertion_line: 150
description: 搜索歌手列表(Beyond 带 fansSize / Beyond乐队 缺字段)解析结构
expression: r
---
SearchArtistsResult {
    artists: [
        SearchArtist {
            id: 11127,
            name: "Beyond",
            pic_url: Some(
                "https://p1.music.126.net/x.jpg",
            ),
            fans_size: Some(
                176371,
            ),
        },
        SearchArtist {
            id: 12345,
            name: "Beyond乐队",
            pic_url: None,
            fans_size: None,
        },
    ],
}
