crates/mineral-channel/netease/src/wire/snapshots/parses_song_list.snap
---
source: crates/mineral-channel/netease/src/wire/search.rs
assertion_line: 151
description: 搜索歌曲列表(MyGO 迷星叫 带 tns/封面 / 碧天伴走 缺 tns)解析结构
expression: r
---
CloudSongsResult {
    songs: [
        AlbumSong {
            id: 1,
            name: "迷星叫",
            tns: [
                "叫喊迷星",
            ],
            ar: [
                Artist {
                    id: 1,
                    name: "MyGO!!!!!",
                },
            ],
            al: Album {
                id: 1,
                name: "迷跡波",
                pic_url: Some(
                    "https://p1.music.126.net/x.jpg",
                ),
            },
            dt: 248000,
        },
        AlbumSong {
            id: 2,
            name: "碧天伴走",
            tns: [],
            ar: [
                Artist {
                    id: 1,
                    name: "MyGO!!!!!",
                },
            ],
            al: Album {
                id: 1,
                name: "迷跡波",
                pic_url: None,
            },
            dt: 256000,
        },
    ],
}
